
syntax = "proto3";

import "google/protobuf/timestamp.proto";

package common;

option go_package = "github.com/QutaqKicker/ChatParser/Protos/gen/go/common;commonv1";

message MessagesFilter{
  int32 Id = 1;
  google.protobuf.Timestamp MinCreatedDate  = 2;
  google.protobuf.Timestamp MaxCreatedDate  = 3;
  string SubText = 4;
  string UserId = 5;
  repeated string UserIds = 6;
  repeated int32 ChatIds = 7;
}

enum SearchAction{
  None = 0;
  Select = 1;
  Delete = 2;
  Backup = 3;
}
